<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olga_kondratenko.cheeseandsausage.PvPGameEndActivity">

    <TextView
        android:id="@+id/second_player-message"
        android:layout_width="330dp"
        android:layout_height="170dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:rotation="180"
        android:text="@string/congratulation"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_player-message"
        android:layout_width="330dp"
        android:layout_height="173dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/congratulation"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pvp_menu_button"
        android:layout_width="165dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:onClick="goToMenu"
        android:rotation="180"
        android:text="@string/menu_button"
        app:layout_constraintBottom_toTopOf="@+id/first_player-message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_player-message"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pvp_continue_button"
        android:layout_width="165dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:onClick="startOneMoreGame"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toTopOf="@+id/first_player-message"
        app:layout_constraintEnd_toStartOf="@+id/pvp_menu_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_player-message"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
