<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.olga_kondratenko.cheeseandsausage.MainActivity">

    <TextView
        android:id="@+id/statistic"
        android:layout_width="223dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/statistic"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/player_menu_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/player_repeat_button"
        app:layout_constraintTop_toBottomOf="@+id/gameField"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addition_statistic"
        android:layout_width="207dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:rotation="180"
        android:text="@string/statistic"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gameField"
        app:layout_constraintEnd_toStartOf="@+id/addition_repeat_button"
        app:layout_constraintStart_toEndOf="@+id/addition_menu_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/gameField"
        android:layout_width="371dp"
        android:layout_height="371dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cellColor"
        android:gravity="fill"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

    </TableLayout>

    <Button
        android:id="@+id/addition_repeat_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_rotate"
        android:contentDescription="@string/repeat_button"
        android:onClick="onClick"
        android:rotation="180"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/player_menu_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/repeat_button"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameField" />

    <Button
        android:id="@+id/player_repeat_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_rotate"
        android:contentDescription="@string/menu_button"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameField" />

    <Button
        android:id="@+id/addition_menu_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/menu_button"
        android:onClick="onClick"
        android:rotation="180"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/gameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
